fix: align nav, article, and footer

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    padding: 103px 70px;
+    padding: 103px 15%;
     background-color: #212529;
     
     &__container {
