--- a/assets/scss/components/_nav.scss
+++ b/assets/scss/components/_nav.scss
@@ -12,7 +12,7 @@
 .headerNav {
     display: flex;
     align-items: center;
-    width: 68%;
+    width: 70%;
     
     @include media($tablet) {
         width: 80%;
