--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -136,7 +136,7 @@
   &__tagCardContainer {
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 70%;
     margin: 0 auto;
     
     @include media($tablet) {
